[package]
name = "pantsemm"
version = "0.0.1"
authors = ["parkcitymedia <blakemichaelgaynor@gmail.com>"]
edition = "2018"

[lib]
name = "pantsemm"
version = "0.0.1"
path = "src/lib.rs"
authors = ["parkcitymedia <blakemichaelgaynor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
#serde_json = {version = "1.0"}
#tokio = {version = "1", features = ["full"]}