[package]
name = "ute"
version = "0.0.1"
authors = ["parkcitymedia <blakemichaelgaynor@gmail.com>"]
edition = "2018"

[lib]
name = "ute"
path = "src/lib.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
