[package]
name = "ute"
version = "0.2.0"
authors = ["parkcitymedia <blakemichaelgaynor@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "ute - (U)biquitous (T)ile (E)ngine - library for matching and manipulating n-sided polygons with tagged sides (in rust)"
edition = "2018"
homepage = "https://github.com/parkcitymedia/ute"
documentation = "https://github.com/parkcitymedia/ute"
repository = "https://github.com/parkcitymedia/ute"
readme = "README.md"
keywords = ["ute","tile","shape","generator","tilemap"]

[lib]
name = "ute"
path = "src/lib.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}

[features]
generate = []